No Context menus anymore for the explorer. All the selected items in the explorer can be configured from the lateral toolbar made with TitledPanes. The GroupOfStructuralElements contains its own list of ExplorerItem children to transmit the configuration modifications. The knobs don't allow to change the level of details anymore. Scope concept to restrict the configuration modifications to the element itself, the element and its children (not beyond the next structural domains) or the branch. The drawing elements listed several times in the explorer (residues in tertiaries, helices in pknots) are synchronized. During the construction of the explorer, a copy of the Treeitem is made and recovered when needed. Then, two different TreeItem objects can contains the same ExplorerItem, which allow the synchronization.

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 
         <main.class>io.github.fjossinet.rnartist.Main</main.class>
+        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
     </properties>
 
     <repositories>
@@ -115,6 +116,18 @@
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>11.0.3</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-javafx</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-fontawesome5-pack</artifactId>
+            <version>2.4.0</version>
         </dependency>
 
         <!--jdesktop (for SwingWorker) -->
