Fit to RNArtistCore 0.2.7

--- a/pom.xml
+++ b/pom.xml
@@ -152,9 +152,9 @@
 
         <!--rnartistcore -->
         <dependency>
-            <groupId>io.github.fjossinet.rnartist.core</groupId>
+            <groupId>io.github.fjossinet.rnartist</groupId>
             <artifactId>rnartistcore</artifactId>
-            <version>0.2.6-SNAPSHOT</version>
+            <version>0.2.7-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
