Updated to use JavaFX 16.

--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <java.version>15</java.version>
-        <javafx.version>16-ea+6</javafx.version>
+        <javafx.version>16</javafx.version>
 
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
