--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
-        <kotlin_version>1.4.30</kotlin_version>
+        <kotlin_version>1.5.0-M1</kotlin_version>
         <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 
@@ -294,12 +294,14 @@
                     </execution>
                     <execution>
                         <id>package-windows</id>
+                        <!--will need the installation of the wix toolset (https://wixtoolset.org/)-->
                         <goals>
                             <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <executable>${java.home}/bin/jpackage</executable>
+                            <executable>jpackage.exe</executable>
                             <arguments>
+                                <argument>--verbose</argument>
                                 <argument>--type</argument>
                                 <argument>msi</argument>
                                 <argument>--name</argument>
